--- a/src/python/interface.ui
+++ b/src/python/interface.ui
@@ -133,33 +133,20 @@
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>101</x>
-       <y>48</y>
+       <x>200</x>
+       <y>50</y>
        <width>141</width>
        <height>51</height>
       </rect>
      </property>
      <property name="text">
-      <string>On</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_6">
-     <property name="geometry">
-      <rect>
-       <x>260</x>
-       <y>48</y>
-       <width>141</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Off</string>
+      <string>On/Off</string>
      </property>
     </widget>
     <widget class="QSlider" name="horizontalSlider_4">
      <property name="geometry">
       <rect>
-       <x>410</x>
+       <x>366</x>
        <y>49</y>
        <width>321</width>
        <height>51</height>
@@ -167,6 +154,19 @@
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_18">
+     <property name="geometry">
+      <rect>
+       <x>236</x>
+       <y>110</y>
+       <width>66</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Disabled</string>
      </property>
     </widget>
    </widget>
@@ -266,7 +266,7 @@
        <x>30</x>
        <y>316</y>
        <width>321</width>
-       <height>321</height>
+       <height>301</height>
       </rect>
      </property>
      <property name="title">
@@ -308,7 +308,7 @@
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>238</x>
+        <x>240</x>
         <y>68</y>
         <width>31</width>
         <height>17</height>
@@ -446,6 +446,56 @@
       <string>Light Intensity</string>
      </property>
     </widget>
+    <widget class="QGroupBox" name="groupBox_6">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>620</y>
+       <width>321</width>
+       <height>181</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Inflation System Control</string>
+     </property>
+     <widget class="QPushButton" name="pushButton_15">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>40</y>
+        <width>141</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Open/Close</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_17">
+      <property name="geometry">
+       <rect>
+        <x>228</x>
+        <y>58</y>
+        <width>71</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>OPEN</string>
+      </property>
+     </widget>
+    </widget>
+    <zorder>progressBar</zorder>
+    <zorder>progressBar_2</zorder>
+    <zorder>progressBar_3</zorder>
+    <zorder>label_8</zorder>
+    <zorder>label_9</zorder>
+    <zorder>label_10</zorder>
+    <zorder>groupBox_5</zorder>
+    <zorder>progressBar_4</zorder>
+    <zorder>label_12</zorder>
+    <zorder>groupBox_6</zorder>
+    <zorder>groupBox_6</zorder>
    </widget>
    <widget class="QGroupBox" name="groupBox_4">
     <property name="geometry">
